--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi>=0.110
 uvicorn[standard]>=0.29
 opencv-python>=4.9
-mediapipe>=0.10
+mediapipe=0.10.9
 numpy>=1.26
 ultralytics>=8.1
 python-dotenv>=1.0
